@@ -22,7 +22,7 @@ class NumberUtilsTest {
     @Test
     void shouldMultiplyOddNumbersByTwo() {
         // given
-        List<Integer> numbers = Arrays.asList(11, 22, 33, 44, 55, 66, 77, 88, 99);
+        List<Integer> numbers = List.of(11, 22, 33, 44, 55, 66, 77, 88, 99);
         // when
         List<Integer> result = NumberUtils.multiplyOddNumber(numbers);
         // then
